Added hibernate to pom
Added quarkus-hibernate-orm-panache to pom.xml

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -25,6 +25,7 @@
     <javax.annotation-api-version>1.3.2</javax.annotation-api-version>
     <beanvalidation-version>2.0.2</beanvalidation-version>
     <jakarta.ws.rs-version>2.1.6</jakarta.ws.rs-version>
+    <quarkus.hibernate.version>2.13.2.Final</quarkus.hibernate.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -127,6 +128,11 @@
       <version>${beanvalidation-version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-hibernate-orm-panache</artifactId>
+      <version>${quarkus.hibernate.version}</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -149,6 +155,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${compiler-plugin.version}</version>
         <configuration>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
           <compilerArgs>
             <arg>-parameters</arg>
           </compilerArgs>
